--- a/scss/component/_forms.scss
+++ b/scss/component/_forms.scss
@@ -7,6 +7,7 @@ $error-color: #d5544b;
         pointer-events: none;
     }
     &__group {
+        width: 100%;
         margin-top: 30px;
         @include abstracts.screen(md) {
             + .form__group {
@@ -33,13 +34,32 @@ $error-color: #d5544b;
             display: none;
         }
     }
+    &__text-area,
     &__text-input {
         display: flex;
-        height: 50px;
-        padding: 0 12px;
         align-items: center;
+        padding: 0 12px;
         border-radius: 10px;
         border: 1.5px solid #d2d1d6;
+    }
+
+    &__text-area {
+        padding: 12px;
+        height: 100px;
+        @include abstracts.screen(sm) {
+            padding: 6px;
+        }
+
+        &-input {
+            width: 100%;
+            resize: none;
+        }
+    }
+
+    &__text-input {
+        position: relative;
+        height: 50px;
+
         @include abstracts.screen(md) {
             height: 48px;
         }
@@ -48,18 +68,148 @@ $error-color: #d5544b;
             border-color: #77dae6;
         }
     }
-    &__input {
+    &__row {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        @include abstracts.screen(md) {
+            gap: 20px;
+        }
+        @include abstracts.screen(sm) {
+            margin-top: -20px;
+            flex-direction: column;
+            gap: 0;
+        }
+        > * {
+            flex: 1;
+        }
+    }
+    &__input,
+    &__text-area-input {
         flex: 1;
+        height: 100%;
         width: 100%;
         font-size: 1.8rem;
         font-weight: 500;
         line-height: 144.444%;
-
         &::placeholder {
             color: #d2d1d6;
             @include abstracts.screen(md) {
                 font-size: 1.6rem;
             }
+        }
+    }
+    &__input {
+        &::placeholder {
+            font-weight: 400;
+        }
+
+        &-icon {
+            margin-left: 12px;
+        }
+    }
+    &__select-dialog {
+        position: absolute;
+        bottom: 40px;
+        left: 10px;
+        z-index: 1;
+        display: flex;
+
+        opacity: 0;
+        visibility: hidden;
+        translate: 0 8px;
+        transition: opacity visibility, translate;
+        transition-duration: 0.2s;
+
+        flex-direction: column;
+
+        background: var(--dialog-bg);
+        padding-bottom: 10px;
+        border: 1px solid #d2d1d6;
+        border-radius: 8px;
+        max-height: 313px;
+        min-width: 240px;
+        box-shadow: 0 0 5px var(--form-select-dialog-shadow);
+
+        &.show {
+            opacity: 1;
+            visibility: visible;
+            translate: 0;
+        }
+        @include abstracts.screen(sm) {
+            position: fixed;
+            max-height: initial;
+            max-width: initial;
+            inset: 0;
+            border-radius: 0;
+        }
+    }
+    &__dialog-heading {
+        font-size: 2rem;
+        font-weight: 600;
+        text-align: center;
+        padding: 5px;
+    }
+
+    &__close-dialog {
+        font-size: 3.4rem;
+        position: absolute;
+        top: -10px;
+        right: 0;
+        padding: 4px 10px;
+    }
+
+    &__search {
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #d2d1d6;
+
+        padding: 0 20px;
+        height: 38px;
+        flex-shrink: 0;
+
+        @include abstracts.screen(lg) {
+            height: 48px;
+        }
+        @include abstracts.screen(sm) {
+            border: 1px solid #d2d1d6;
+            margin-top: 15px;
+        }
+        &-icon {
+            width: 16px;
+            margin-left: 10px;
+            @include abstracts.screen(sm) {
+                margin-right: 10px;
+                width: 20px;
+            }
+        }
+        &-input {
+            flex: 1;
+            width: 100%;
+            font-size: 1.6rem;
+        }
+    }
+    &__option-list {
+        margin-top: 12px;
+        flex: 1;
+        overflow-y: auto;
+        overscroll-behavior: contain;
+    }
+    &__option {
+        padding: 8px 20px;
+        font-size: 1.4rem;
+
+        &:not(&--current):hover {
+            background: var(--form-select-option);
+            cursor: pointer;
+        }
+        &--current {
+            background: rgba($color: #ffb700, $alpha: 0.8);
+            font-weight: 600;
+        }
+        @include abstracts.screen(lg) {
+            padding: 18px 20px;
+            font-size: 1.6rem;
         }
     }
 
@@ -134,6 +284,11 @@ $error-color: #d5544b;
         font-weight: 500;
         line-height: 145.455%;
 
+        &--medium {
+            font-size: 1.8rem;
+            font-weight: 500;
+            line-height: 144.444%;
+        }
         &--small {
             display: block;
             margin-bottom: 10px;
@@ -157,7 +312,6 @@ $error-color: #d5544b;
         border-radius: 6px;
         border: 1px solid #d2d1d6;
         padding: 0 16px;
-        overflow: hidden;
 
         &--small {
             width: 121px;
@@ -168,7 +322,11 @@ $error-color: #d5544b;
             }
         }
         @include abstracts.screen(sm) {
+            padding: 0 4px;
             width: 100%;
+        }
+        &--short {
+            height: 40px;
         }
     }
 
@@ -220,22 +378,5 @@ $error-color: #d5544b;
     }
     &__select + &__select {
         border-left: 1px solid #d2d1d6;
-    }
-    &__input {
-        font-size: 1.4rem;
-        font-weight: 500;
-        line-height: 142.857%;
-        width: 100%;
-        background: transparent;
-        @include abstracts.screen(sm) {
-            font-size: 1.6rem;
-        }
-        &::placeholder {
-            font-weight: 400;
-        }
-
-        &-icon {
-            margin-left: 12px;
-        }
     }
 }
