--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -43,10 +43,19 @@ select {
     border: none;
     outline: none;
 }
-input {
+input,
+textarea {
     background: transparent;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+input:-webkit-autofill:hover {
+    transition: background-color 1s 9999s;
+    -webkit-text-fill-color: var(--text-color);
+    caret-color: var(--text-color);
+}
 .icon {
     filter: var(--icon-color);
 }
