--- a/scss/component/_model.scss
+++ b/scss/component/_model.scss
@@ -5,7 +5,7 @@
     inset: 0;
 }
 
-.dialog {
+.model {
     font-family: lato, sans-serif;
     @extend %fill-screen;
     z-index: 99;
@@ -23,22 +23,57 @@
         opacity: 1;
         visibility: visible;
     }
+    &__form-group {
+        margin-top: 30px !important;
+    }
+    &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+        font-size: 3.5rem;
+        padding: 3px 20px;
+        opacity: 0.7;
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    &__body {
+        padding-right: 20px;
+        max-height: calc(100vh - 180px);
+        overflow-y: auto;
+    }
+
+    &__text {
+        font-size: 2rem;
+        font-weight: 700;
+        line-height: 1.5;
+    }
     &__content {
         position: relative;
         background: var(--dialog-bg);
         z-index: 1;
+        width: min(var(--content-width, 800px), 100% - 40px);
 
-        max-width: min(450px, 100% - 40px);
-        padding: 30px;
+        padding: 30px 10px 30px 30px;
         border-radius: 20px;
         box-shadow: 0px 20px 60px 10px var(--dialog-shadow);
-        @include abstracts.screen(md) {
-            padding: 20px;
+        @include abstracts.screen(sm) {
+            padding: 20px 0 20px 20px;
         }
     }
-    &__text {
-        font-size: 1.8rem;
-        line-height: 1.5;
+    &--small &__content {
+        --content-width: 400px;
+    }
+
+    &--large &__content {
+        --content-width: 1100px;
+    }
+    &--fill &__content {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
     }
 
     &__bottom {
@@ -48,8 +83,12 @@
         margin-top: 30px;
         justify-content: flex-end;
         gap: 30px;
+        padding-right: 20px;
         @include abstracts.screen(md) {
             gap: 20px;
+        }
+        @include abstracts.screen(sm) {
+            margin-top: 20px;
         }
     }
     @include abstracts.screen(md) {
