--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -24,6 +24,36 @@
     background: var(--checkout-cart-info-bg);
     box-shadow: 0px 20px 60px 10px var(--checkout-cart-info-shadow);
 
+    &__heading {
+        font-size: 2.4rem;
+        font-weight: 700;
+        line-height: 141.667%;
+
+        &--lv2 {
+            font-size: 2.2rem;
+            font-weight: 500;
+            line-height: 145.455%;
+        }
+    }
+    &__desc {
+        margin-top: 6px;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 146.667%;
+    }
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+    }
+    &__sub-heading {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+        margin-bottom: 30px;
+    }
+
     &__list {
         margin-top: -30px;
         @include abstracts.screen(md) {
@@ -87,6 +117,40 @@
     }
     @include abstracts.screen(md) {
         padding: 16px;
+    }
+
+    &__edit-btn {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 1.8rem;
+        line-height: 144.444%;
+    }
+    &__form {
+        margin-bottom: 30px;
+        @include abstracts.screen(xl) {
+            &-row {
+                gap: 15px;
+            }
+        }
+    }
+    &__checkbox {
+        &-input {
+            appearance: none;
+            &::before {
+                content: url("../icons/checkbox-uncheck.svg");
+            }
+            &:not(:checked)::before {
+                filter: var(--icon-color);
+            }
+            &:checked::before {
+                content: url("../icons/checkbox-checked.svg");
+            }
+        }
+    }
+
+    &__text-input {
+        margin-top: 20px;
     }
 }
 
@@ -240,5 +304,168 @@
         font-size: 1.4rem;
         font-weight: 400;
         line-height: 142.857%;
+    }
+}
+
+.user-address {
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 16px;
+        @include abstracts.screen(md) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
+    &__title {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+    }
+    &__desc {
+        margin-top: 4px;
+        font-size: 1.5rem;
+        line-height: 146.667%;
+    }
+
+    &__list {
+        margin-top: 30px;
+    }
+
+    &__message {
+        margin-top: 30px;
+        font-weight: 500;
+    }
+    &__btn {
+        color: #1a162e;
+        font-size: 1.6rem;
+    }
+    &__link {
+        color: #0071dc;
+    }
+}
+.address-card {
+    display: flex;
+
+    @include abstracts.screen(md) {
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__left {
+        flex: 1;
+        display: flex;
+        gap: 16px;
+    }
+    &__title {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+    }
+    &__desc {
+        max-width: min(520px, 90%);
+        margin-top: 4px;
+        font-size: 1.5rem;
+        line-height: 146.667%;
+    }
+    &__list {
+        margin-top: 20px;
+        display: flex;
+        gap: 22px;
+        list-style: disc inside;
+        @include abstracts.screen(sm) {
+            flex-direction: column;
+            gap: 16px;
+        }
+    }
+    &__item {
+        padding: 0 0 0 8px;
+        font-size: 1.4rem;
+        line-height: 142.857%;
+    }
+
+    &__ctrl {
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+.address-card + .address-card {
+    margin-top: 30px;
+}
+
+.payment-item {
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    background: var(--payment-item-bg);
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    &--pointer {
+        cursor: pointer;
+    }
+    &__content {
+        flex-grow: 1;
+        &--inline {
+            display: flex;
+            align-items: center;
+            @include abstracts.screen(sm) {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+            }
+        }
+    }
+    &__info {
+        flex-grow: 1;
+        gap: 16px;
+    }
+    &__title {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 144.444%;
+    }
+    &__desc {
+        margin-top: 4px;
+        &--low {
+            font-size: 1.6rem;
+            color: #9e9da8;
+            line-height: 150%;
+        }
+    }
+    &__desc,
+    &__link {
+        font-size: 1.5rem;
+        line-height: 146.667%;
+    }
+    &__link {
+        padding: 10px;
+        color: #0071dc;
+    }
+
+    &__thumb {
+        background: transparent;
+        width: 70px;
+    }
+
+    &__checkbox {
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        gap: 14px;
+
+        &-input:checked ~ .payment-item__cost {
+            color: inherit;
+            font-weight: 500;
+        }
+    }
+    &__cost {
+        font-size: 1.6rem;
+        color: #9e9da8;
+        line-height: 150%;
     }
 }
