--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -4,6 +4,7 @@ html {
     --text-color: #1a162e;
     --icon-color: brightness(0) saturate(100%) invert(9%) sepia(6%) saturate(6804%) hue-rotate(213deg) brightness(87%)
         contrast(95%);
+
     // header
     --header-bg-color: #eee;
     --body-bg: #f6f6f6;
@@ -54,7 +55,10 @@ html {
     --filter-bg-color: #fff;
     --filter-form-shadow: rgba(200, 200, 200, 0.4);
 
+    // form
     --form-tag-bg-color: #f8f8fb;
+    --form-select-dialog-shadow: rgba($color: #000000, $alpha: 0.15);
+    --form-select-option: #ebebeb;
 
     // footer
     --footer-bg-color: #efeeea;
@@ -98,6 +102,7 @@ html {
     --checkout-cart-info-bg: #fff;
     --checkout-cart-info-shadow: rgba(237, 237, 246, 0.2);
     --checkout-cart-item-border: #d2d1d6;
+    --payment-item-bg: #f6f6f6;
 
     // gift-item
     --gift-item-icon-shadow: rgba(237, 237, 246, 0.2);
