--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -17,7 +17,7 @@
             </button>
             <a href="./checkout.html" class="nav-btn d-none d-md-flex">
                 <img src="./assets/icons/cart.svg" alt="" class="icon nav-btn__icon" />
-                <span class="nav-btn__title">Card</span>
+                <span class="nav-btn__title">Cart</span>
                 <span class="nav-btn__qnt">3</span>
             </a>
             <a href="#!" class="nav-btn d-none d-md-flex">
