--- a/templates/header.html
+++ b/templates/header.html
@@ -16,9 +16,9 @@
             <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
                 <img src="./assets/icons/arrow-left.svg" alt="" class="icon" />
             </button>
-            <a href="#!" class="nav-btn d-none d-md-flex">
+            <a href="./checkout.html" class="nav-btn d-none d-md-flex">
                 <img src="./assets/icons/cart.svg" alt="" class="icon nav-btn__icon" />
-                <span class="nav-btn__title">Card</span>
+                <span class="nav-btn__title">Cart</span>
                 <span class="nav-btn__qnt">3</span>
             </a>
             <a href="#!" class="nav-btn d-none d-md-flex">
