--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,6 +215,10 @@ strong {
   font-weight: 600;
 }
 
+.separate {
+  margin: var(--margin) 0;
+}
+
 .row > *, .container-fluid, .container {
   padding-left: calc(var(--grid-gutter-x) * 0.5);
   padding-right: calc(var(--grid-gutter-x) * 0.5);
@@ -1407,14 +1411,19 @@ html.dark {
   --search-bar-bg: #171c28;
   --review-card-bg: #171c28;
   --checkout-breadcrumb-bg: #171c28;
-  --checkout-cart-info-bg: #171c28;
-  --checkout-cart-info-shadow: rgba(23, 28, 40, 0.2);
+  --checkout-page-container-bg: #171c28;
+  --checkout-page-container-shadow: rgba(23, 28, 40, 0.2);
   --checkout-cart-item-border: #292e39;
   --payment-item-bg: #292e39;
   --gift-item-icon-bg: #292e39;
   --gift-item-icon-shadow: initial;
   --dialog-bg: #292e39;
   --dialog-shadow: rgba(23, 28, 40, 0.2);
+  --profile-sidebar-bg: #171c28;
+  --profile-sidebar-shadow: rgba(23, 28, 40, 0.2);
+  --profile-user-shadow: rgba(23, 28, 40, 0.2);
+  --account-info-bg: #292e39;
+  --account-icon-bg: #171c28;
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1474,14 +1483,19 @@ html {
   --search-bar-bg: #fff;
   --review-card-bg: #fafafd;
   --checkout-breadcrumb-bg: #fff;
-  --checkout-cart-info-bg: #fff;
-  --checkout-cart-info-shadow: rgba(237, 237, 246, 0.2);
+  --checkout-page-container-bg: #fff;
+  --checkout-page-container-shadow: rgba(237, 237, 246, 0.2);
   --checkout-cart-item-border: #d2d1d6;
   --payment-item-bg: #f6f6f6;
   --gift-item-icon-shadow: rgba(237, 237, 246, 0.2);
   --gift-item-icon-bg: rgb(118, 68, 225, 0.1);
   --dialog-bg: #fff;
   --dialog-shadow: rgba(237, 237, 246, 0.2);
+  --profile-sidebar-bg: #fff;
+  --profile-sidebar-shadow: rgba(237, 237, 246, 0.2);
+  --profile-user-shadow: rgba(237, 237, 246, 0.2);
+  --account-info-bg: #f6f6f6;
+  --account-icon-bg: #fff;
 }
 @media (max-width: 991.98px) {
   html {
@@ -3225,6 +3239,125 @@ html {
   background: rgba(0, 0, 0, 0.4);
 }
 
+.payment-card {
+  position: relative;
+  z-index: 0;
+  background-color: var(--bg-color);
+  height: 100%;
+  padding: 20px;
+  color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  user-select: none;
+}
+.payment-card__img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  pointer-events: none;
+}
+.payment-card__top {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.payment-card__type {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+}
+.payment-card__number {
+  margin-top: 37px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 144.444%;
+}
+.payment-card__bottom {
+  margin-top: 20px;
+  display: flex;
+}
+.payment-card__expired {
+  margin: 0 auto 0 40px;
+}
+.payment-card__label {
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 175%;
+}
+.payment-card__value {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 140%;
+}
+.payment-card__circle {
+  width: 42px;
+  position: relative;
+}
+.payment-card__circle::before, .payment-card__circle::after {
+  position: absolute;
+  content: "";
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+}
+.payment-card__circle::before {
+  left: 0;
+  background: #f94545;
+  z-index: 1;
+  mix-blend-mode: hard-light;
+}
+.payment-card__circle::after {
+  right: 0;
+  background: #ffb700;
+}
+
+.new-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  border-radius: 10px;
+  border: 1px dashed #d2d1d6;
+  cursor: pointer;
+}
+.new-card__text {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+}
+
+.account-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  background: var(--account-info-bg);
+  padding: 10px;
+}
+.account-info__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 54px;
+  height: 54px;
+  border-radius: 8px;
+  background: var(--account-icon-bg);
+}
+.account-info__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 146.667%;
+}
+.account-info__desc {
+  margin-top: 6px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 142.857%;
+}
+
 .home {
   margin-bottom: 50px;
 }
@@ -3888,149 +4021,158 @@ html {
   background: var(--checkout-breadcrumb-bg);
 }
 
-.cart-info {
+.page-container {
   padding: 30px;
   border-radius: 20px;
-  background: var(--checkout-cart-info-bg);
-  box-shadow: 0px 20px 60px 10px var(--checkout-cart-info-shadow);
+  background: var(--checkout-page-container-bg);
+  box-shadow: 0px 20px 60px 10px var(--checkout-page-container-shadow);
 }
-.cart-info__heading {
+.page-container__heading {
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 141.667%;
 }
-.cart-info__heading--lv2 {
+.page-container__heading--lv2 {
   font-size: 2.2rem;
   font-weight: 500;
   line-height: 145.455%;
 }
-.cart-info__desc {
+.page-container__desc {
   margin-top: 6px;
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 146.667%;
 }
-.cart-info__top {
+.page-container__top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
 }
-.cart-info__sub-heading {
+.page-container__sub-heading {
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 144.444%;
   margin-bottom: 30px;
 }
-.cart-info__list {
+.page-container__list {
   margin-top: -30px;
 }
 @media (max-width: 767.98px) {
-  .cart-info__list {
+  .page-container__list {
     margin-top: -16px;
   }
 }
-.cart-info__bottom {
+.page-container__bottom {
   margin-top: 30px;
 }
-.cart-info__continue {
+.page-container__continue {
   height: 100%;
   display: flex;
   align-items: flex-end;
 }
-.cart-info__continue-link {
+.page-container__continue-link {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-.cart-info__continue-icon {
+.page-container__continue-icon {
   rotate: 90deg;
   transition: translate 0.3s;
 }
-.cart-info__continue-link:hover .cart-info__continue-icon {
+.page-container__continue-link:hover .page-container__continue-icon {
   translate: -5px;
 }
-.cart-info__separate {
+.page-container__separate {
   margin: 30px 0;
   height: 1px;
   background: var(--checkout-cart-item-border);
 }
-.cart-info__continue-link, .cart-info__row {
+.page-container__continue-link, .page-container__row {
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 144.444%;
 }
-.cart-info__row {
+.page-container__row {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 10px;
 }
-.cart-info__row--bold {
+.page-container__row--bold {
   font-weight: 700;
 }
-.cart-info__sub-label {
+@media (max-width: 767.98px) {
+  .page-container__row--block {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+  }
+}
+.page-container__sub-label {
   font-weight: 400;
 }
-.cart-info__next-btn {
+.page-container__next-btn {
   margin-top: 30px;
   color: #1a162e;
 }
 @media (max-width: 767.98px) {
-  .cart-info {
+  .page-container {
     padding: 16px;
   }
 }
-.cart-info__edit-btn {
+.page-container__edit-btn {
   display: flex;
   align-items: center;
   gap: 10px;
   font-size: 1.8rem;
   line-height: 144.444%;
 }
-.cart-info__form {
+.page-container__form {
   margin-bottom: 30px;
 }
 @media (max-width: 1199.98px) {
-  .cart-info__form-row {
+  .page-container__form-row {
     gap: 15px;
   }
 }
-.cart-info__checkbox-input {
+.page-container__checkbox-input {
   appearance: none;
 }
-.cart-info__checkbox-input::before {
+.page-container__checkbox-input::before {
   content: url("../icons/checkbox-uncheck.svg");
 }
-.cart-info__checkbox-input:not(:checked)::before {
+.page-container__checkbox-input:not(:checked)::before {
   filter: var(--icon-color);
 }
-.cart-info__checkbox-input:checked::before {
+.page-container__checkbox-input:checked::before {
   content: url("../icons/checkbox-checked.svg");
 }
-.cart-info__text-input {
+.page-container__text-input {
   margin-top: 20px;
 }
+.page-container__check-all {
+  margin: 30px 0;
+}
 
-.cart-info + .cart-info {
+.page-container + .page-container {
   margin-top: 30px;
 }
 
 .cart-item {
   padding: 30px 0;
   display: flex;
-  gap: 30px;
   border-bottom: 1px solid var(--checkout-cart-item-border);
 }
 @media (max-width: 767.98px) {
   .cart-item {
-    gap: 16px;
     padding: 16px 0;
   }
 }
 .cart-item__thumb {
   width: 175px;
   height: 172px;
+  margin: 0 30px 0 20px;
   object-fit: contain;
 }
 @media (max-width: 1199.98px) {
@@ -4043,6 +4185,16 @@ html {
   .cart-item__thumb {
     width: 100px;
     height: 100px;
+  }
+}
+@media (max-width: 767.98px) {
+  .cart-item__thumb {
+    margin: 0 16px;
+  }
+}
+@media (max-width: 575.98px) {
+  .cart-item__thumb {
+    margin: 0 8px;
   }
 }
 .cart-item__content {
@@ -4082,12 +4234,28 @@ html {
 .cart-item__status {
   color: #67b044;
 }
+.cart-item__ctrl-wrap {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+@media (max-width: 991.98px) {
+  .cart-item__ctrl-wrap {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
 .cart-item-ctrl {
   display: flex;
   align-items: center;
   gap: 20px;
   margin-top: auto;
   min-height: 44px;
+}
+@media (max-width: 575.98px) {
+  .cart-item-ctrl {
+    gap: 10px;
+  }
 }
 @media (max-width: 767.98px) {
   .cart-item-ctrl--md-column {
@@ -4132,6 +4300,14 @@ html {
 @media (max-width: 767.98px) {
   .cart-item:last-child {
     border: none;
+  }
+}
+.cart-item__checkout-btn {
+  margin-top: auto;
+}
+@media (max-width: 767.98px) {
+  .cart-item__checkout-btn {
+    max-width: 200px;
   }
 }
 
@@ -4320,6 +4496,112 @@ html {
   font-size: 1.6rem;
   color: #9e9da8;
   line-height: 150%;
+}
+
+.profile {
+  margin-bottom: 50px;
+}
+.profile__container {
+  margin-top: 30px;
+}
+.profile__sidebar {
+  border-radius: 20px;
+  background: var(--profile-sidebar-bg);
+  box-shadow: 0px 20px 60px 10px var(--profile-sidebar-shadow);
+  overflow: hidden;
+  padding-bottom: 30px;
+}
+.profile-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px 20px;
+  background: linear-gradient(180deg, rgba(26, 22, 46, 0) 0%, #1a162e 100%), url("../img/profile/cover.png") no-repeat center/cover;
+  border-radius: 20px 20px 0px 0px;
+  box-shadow: 0px 20px 60px 10px var(--profile-user-shadow);
+}
+.profile-user__name {
+  margin-top: 15px;
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 144.444%;
+}
+.profile-user__desc {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 146.667%;
+}
+.profile__avatar {
+  width: 121px;
+  height: 121px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  background: #ccc content-box;
+}
+.profile-menu {
+  margin-top: 30px;
+  padding: 0 30px;
+}
+.profile-menu__title {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 144.444%;
+}
+.profile-menu__list {
+  margin-top: 17px;
+}
+.profile-menu__link {
+  padding: 0 6px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 146.667%;
+}
+.profile-menu__link:hover {
+  background: #ebebeb;
+  border-radius: 5px;
+}
+.profile-menu__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+}
+.profile__desc {
+  margin-bottom: 16px;
+}
+
+.favourite-item {
+  display: flex;
+  gap: 20px;
+}
+.favourite-item__thumb {
+  width: 151px;
+  height: 108px;
+  object-fit: contain;
+}
+.favourite-item__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 146.667%;
+}
+.favourite-item__content {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  gap: 20px;
+}
+.favourite-item__price {
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 145.455%;
 }
 
 /*# sourceMappingURL=main.css.map */
