--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -12,3 +12,5 @@
 @forward "./review-card";
 @forward "./text-content";
 @forward "./model";
+@forward "./payment-card";
+@forward "./account-info";
