--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -95,8 +95,8 @@ html.dark {
 
     // checkout
     --checkout-breadcrumb-bg: #171c28;
-    --checkout-cart-info-bg: #171c28;
-    --checkout-cart-info-shadow: rgba(23, 28, 40, 0.2);
+    --checkout-page-container-bg: #171c28;
+    --checkout-page-container-shadow: rgba(23, 28, 40, 0.2);
     --checkout-cart-item-border: #292e39;
     --payment-item-bg: #292e39;
 
@@ -107,4 +107,13 @@ html.dark {
     // dialog
     --dialog-bg: #292e39;
     --dialog-shadow: rgba(23, 28, 40, 0.2);
+
+    // profile
+    --profile-sidebar-bg: #171c28;
+    --profile-sidebar-shadow: rgba(23, 28, 40, 0.2);
+    --profile-user-shadow: rgba(23, 28, 40, 0.2);
+
+    // account-info
+    --account-info-bg: #292e39;
+    --account-icon-bg: #171c28;
 }
