--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -99,8 +99,8 @@ html {
 
     // checkout
     --checkout-breadcrumb-bg: #fff;
-    --checkout-cart-info-bg: #fff;
-    --checkout-cart-info-shadow: rgba(237, 237, 246, 0.2);
+    --checkout-page-container-bg: #fff;
+    --checkout-page-container-shadow: rgba(237, 237, 246, 0.2);
     --checkout-cart-item-border: #d2d1d6;
     --payment-item-bg: #f6f6f6;
 
@@ -111,4 +111,13 @@ html {
     // dialog
     --dialog-bg: #fff;
     --dialog-shadow: rgba(237, 237, 246, 0.2);
+
+    // profile
+    --profile-sidebar-bg: #fff;
+    --profile-sidebar-shadow: rgba(237, 237, 246, 0.2);
+    --profile-user-shadow: rgba(237, 237, 246, 0.2);
+
+    // account-info
+    --account-info-bg: #f6f6f6;
+    --account-icon-bg: #fff;
 }
