--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -112,8 +112,10 @@ html.dark {
     --profile-sidebar-bg: #171c28;
     --profile-sidebar-shadow: rgba(23, 28, 40, 0.2);
     --profile-user-shadow: rgba(23, 28, 40, 0.2);
-
+    --profile-sidebar-hover: #292e39;
     // account-info
     --account-info-bg: #292e39;
     --account-icon-bg: #171c28;
+
+    --separate-color: #292e39;
 }
