--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -4772,6 +4772,43 @@
 
             <div class="top-act__use">
                 <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+
+                <div class="act-dropdown top-act__dropdown">
+                    <div class="act-dropdown__inner user-menu">
+                        <img
+                            src="./assets/icons/arrow-up.png"
+                            alt=""
+                            class="act-dropdown__arrow top-act__dropdown-arrow"
+                        />
+                        <div class="user-menu__top">
+                            <img src="./assets/img/avatar.jpg" alt="" class="user-menu__avatar" />
+                            <div>
+                                <p class="user-menu__name">Ohyeeadr Yall</p>
+                                <p>@ohyeeadr Yall</p>
+                            </div>
+                        </div>
+                        <ul class="user-menu__list">
+                            <li>
+                                <a href="./profile.html" class="user-menu__link">Profile</a>
+                            </li>
+                            <li>
+                                <a href="./favorite.html" class="user-menu__link">Favorite list</a>
+                            </li>
+                            <li class="user-menu__separate">
+                                <a href="#!" class="user-menu__link" id="switch-theme-btn">
+                                    <span>Dark mode</span>
+                                    <img src="./assets/icons/sundark.svg" alt="" class="icon user-menu__icon" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="./sign-in.html" class="user-menu__link">Setting</a>
+                            </li>
+                            <li class="user-menu__separate">
+                                <a href="./sign-in.html" class="user-menu__link">Log out</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
