--- a/scss/component/_account-info.scss
+++ b/scss/component/_account-info.scss
@@ -10,6 +10,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-shrink: 0;
         width: 54px;
         height: 54px;
         border-radius: 8px;
