--- a/scss/component/_payment-card.scss
+++ b/scss/component/_payment-card.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 .payment-card {
     position: relative;
     z-index: 0;
@@ -89,6 +91,8 @@
     border-radius: 10px;
     border: 1px dashed #d2d1d6;
     cursor: pointer;
+    min-height: 170px;
+
     &__text {
         font-size: 1.4rem;
         font-weight: 500;
