--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -18,7 +18,7 @@
     @extend %flexItemCenter;
     position: relative;
     z-index: 1;
-    padding: 30px 0;
+    padding: 16px 0;
 
     @include abstracts.screen(md) {
         justify-content: space-between;
@@ -239,7 +239,21 @@
         height: 30px;
         background: var(--top-act-group-separate);
     }
+    &__use {
+        position: relative;
 
+        &:hover .act-dropdown {
+            display: block;
+        }
+    }
+    &__dropdown {
+        width: min(300px, 100vw) !important;
+        right: -15px !important;
+    }
+
+    &__dropdown-arrow {
+        right: 15px !important;
+    }
     &__avatar {
         width: 50px;
         height: 50px;
@@ -386,5 +400,45 @@
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
+    }
+}
+
+.user-menu {
+    &__top {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    &__avatar {
+        width: 60px;
+        height: 60px;
+        border-radius: 10px;
+        object-fit: cover;
+    }
+
+    &__name {
+        font-size: 1.8rem;
+        font-weight: 500;
+        margin-bottom: 6px;
+    }
+    &__list {
+        margin-top: 30px;
+    }
+    &__separate {
+        margin-top: 10px;
+        padding-top: 10px;
+        border-top: 1px solid var(--separate-color);
+    }
+
+    &__link {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 15px;
+        padding: 12px 0;
+        &:hover {
+            background: var(--profile-sidebar-hover);
+            border-radius: 6px;
+        }
     }
 }
