--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -25,6 +25,8 @@
     box-shadow: 0px 20px 60px 10px var(--checkout-page-container-shadow);
 
     &__heading {
+        display: flex;
+        align-items: center;
         font-size: 2.4rem;
         font-weight: 700;
         line-height: 141.667%;
@@ -34,6 +36,12 @@
             font-weight: 500;
             line-height: 145.455%;
         }
+    }
+    &__back-arrow {
+        position: relative;
+        top: 4px;
+        width: 50px;
+        padding-right: 20px;
     }
     &__desc {
         margin-top: 6px;
