--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -116,8 +116,11 @@ html {
     --profile-sidebar-bg: #fff;
     --profile-sidebar-shadow: rgba(237, 237, 246, 0.2);
     --profile-user-shadow: rgba(237, 237, 246, 0.2);
+    --profile-sidebar-hover: #ebebeb;
 
     // account-info
     --account-info-bg: #f6f6f6;
     --account-icon-bg: #fff;
+
+    --separate-color: #d2d1d6;
 }
