--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -6,7 +6,7 @@
         </button>
 
         <!-- logo -->
-        <a href="./" class="logo top-bar__logo">
+        <a href="./index-logined.html" class="logo top-bar__logo">
             <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon top-bar__logo-icon" />
             <h1 class="logo__title top-bar__logo-title">grocerymart</h1>
         </a>
@@ -4801,7 +4801,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="./sign-in.html" class="user-menu__link">Setting</a>
+                                <a href="#!" class="user-menu__link">Setting</a>
                             </li>
                             <li class="user-menu__separate">
                                 <a href="./sign-in.html" class="user-menu__link">Log out</a>
